ajustando problemas
