# swaggerOutput.json
@@ -92,6 +92,69 @@
         }
       }
     },
+    "/usuario/alterar-senha": {
+      "put": {
+        "tags": [
+          "Usuário - FUNCIONARIO"
+        ],
+        "summary": "Permite que o usuário altere sua própria senha, fornecendo a senha atual para validação.",
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "senhaAtual": {
+                    "type": "string",
+                    "example": "senhaAtual123"
+                  },
+                  "novaSenha": {
+                    "type": "string",
+                    "example": "novaSenha456"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/usuario/admin": {
       "post": {
         "tags": [
